# Arduino-Makefile

./: .gitignore  .travis.yml  Arduino.mk  CONTRIBUTING.md  Common.mk  HISTORY.md  Makefile.am  OpenCM.mk  OpenCR.mk  README.md  Sam.mk  Teensy.mk  ard-reset-arduino.1  ardmk-init.1  arduino-mk-tool.in  arduino-mk-vars.md  chipKIT.mk  configure.ac  robotis-loader.1
arduino-mk/: Arduino.mk  Common.mk  ard-parse-boards  chipKIT.mk
examples/: README.md  TestSuiteCommon.mk
examples/ATtinyBlink/: Makefile
examples/AnalogInOutSerial/: Makefile
examples/Blink/: Blink.ino  Makefile
examples/Blink-chipKIT/: Makefile
examples/Blink/build-cli/: Blink.cpp  Blink.elf  Blink.hex  depends.mk
examples/Blink3rdPartyLib/: Blink3rdPartyLib.cpp  Makefile  board.mk
examples/Blink3rdPartyLib/Toggle/: Makefile  TogglePin.cpp  TogglePin.h
examples/BlinkChipKIT/: Makefile
examples/BlinkInAVRC/: Makefile  blink.c
examples/BlinkNetworkRPi/: ATtinyBlink.ino  Makefile
examples/BlinkOpenCM/: Blink.ino  Makefile
examples/BlinkOpenCR/: BlinkOpenCR.ino  Makefile
examples/BlinkTeensy/: Makefile
examples/BlinkWithoutDelay/: Makefile
examples/BlinkWithoutDelay/build-cli/: BlinkWithoutDelay.cpp  BlinkWithoutDelay.hex  a.out.elf  depends.mk
examples/DueBlink/: DueBlink.ino  Makefile
examples/Fade/: Makefile
examples/Fade/build-cli/: Fade.cpp  Fade.elf  Fade.hex  depends.mk
examples/HelloWorld/: Makefile
examples/HelloWorld/build-cli/: HelloWorld.cpp  HelloWorld.elf  HelloWorld.hex  depends.mk
examples/MZeroBlink/: Makefile
examples/MakefileExample/: Makefile-3rd_party-board.mk  Makefile-example.mk
examples/SerialPrint/: Makefile  SerialPrint.ino
examples/TinySoftWareSerial/: Makefile  TinySoftwareSerial.ino
examples/WebServer/: Makefile  WebServer.ino
examples/WebServer/build-cli/: WebServer.cpp  WebServer.d  WebServer.elf  WebServer.hex
examples/ZeroBlink/: Makefile
examples/master_reader/: Makefile
examples/master_reader/build-cli/: master_reader.cpp  master_reader.d  master_reader.elf  master_reader.hex
examples/toneMelody/: Makefile
examples/toneMelody/build-cli/: depends.mk  toneMelody.cpp  toneMelody.elf  toneMelody.hex
package/: README.md
packaging/debian/: README.md
packaging/fedora/: README.md  arduino-mk.spec
script/: runtests.sh
script/bootstrap/: arduino.sh  chipkit.sh  common.sh  pip-requirements.txt
tests/: TestSuiteCommon.mk
tests/Blink/: Makefile
tests/BlinkChipKIT/: Makefile
tests/BlinkInAVRC/: Makefile
tests/HelloWorld/: Makefile
tests/WebServer/: Makefile
tests/script/: bootstrap.sh  runtests.sh
tests/script/bootstrap/: arduino.sh  chipkit.sh  common.sh  pip-requirements.txt  samd.sh
